--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="navbar">
 
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" width="125px"></a>
+                    <a href="index.html"><img src="images/logo.png" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -30,8 +30,8 @@
                         <li><a href="Account.html">Account</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img class="cart-1" src="/images/cart.png" width="30px" height="30px"></a>
-                <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <a href="cart.html"><img class="cart-1" src="images/cart.png" width="30px" height="30px"></a>
+                <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
             <div class="row">
                 <div class="col-2">
@@ -41,7 +41,7 @@
                     <a href="" class="btn">Explore Now &#8594;</a>
                 </div>
                 <div class="col-2">
-                    <img src="/images/image1.png">
+                    <img src="images/image1.png">
                 </div>
             </div>
         </div>
@@ -54,13 +54,13 @@
 
             <div class="row">
                 <div class="col-3">
-                    <img src="/images/category-1.jpg">
+                    <img src="images/category-1.jpg">
                 </div>
                 <div class="col-3">
-                    <img src="/images/category-2.jpg">
+                    <img src="images/category-2.jpg">
                 </div>
                 <div class="col-3">
-                    <img src="/images/category-3.jpg">
+                    <img src="images/category-3.jpg">
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
         <h2 class="title">Featured Products</h2>
         <div class="row">
             <div class="col-4">
-                <a href="products-detail.html"><img src="/images/product-1.jpg"></a>
+                <a href="products-detail.html"><img src="images/product-1.jpg"></a>
                 <a href="products-detail.html"><h4>Red Printed T-Shirt</h4></a>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -84,7 +84,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-2.jpg">
+                <img src="images/product-2.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -96,7 +96,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-3.jpg">
+                <img src="images/product-3.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -108,7 +108,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-4.jpg">
+                <img src="images/product-4.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -123,7 +123,7 @@
         <h2 class="title">Latest Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-5.jpg">
+                <img src="images/product-5.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -135,7 +135,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-6.jpg">
+                <img src="images/product-6.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -147,7 +147,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-7.jpg">
+                <img src="images/product-7.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -159,7 +159,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-8.jpg">
+                <img src="images/product-8.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -173,7 +173,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-9.jpg">
+                <img src="images/product-9.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -185,7 +185,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-10.jpg">
+                <img src="images/product-10.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -197,7 +197,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-11.jpg">
+                <img src="images/product-11.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -209,7 +209,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-12.jpg">
+                <img src="images/product-12.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -229,7 +229,7 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
-                    <img src="/images/exclusive.png" class="offer-img">
+                    <img src="images/exclusive.png" class="offer-img">
                 </div>
                 <div class="col-2">
                     <p>Exclusive Available on RedStore</p>
@@ -259,7 +259,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <img src="/images/user-1.png">
+                    <img src="images/user-1.png">
                     <h3>Seo Parak</h3>
                 </div>
                 <div class="col-3">
@@ -274,7 +274,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <img src="/images/user-2.png">
+                    <img src="images/user-2.png">
                     <h3>Rukil Mike</h3>
                 </div>
                 <div class="col-3">
@@ -289,7 +289,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star-o"></i>
                     </div>
-                    <img src="/images/user-3.png">
+                    <img src="images/user-3.png">
                     <h3>Steven Smith</h3>
                 </div>
             </div>
@@ -302,19 +302,19 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-5">
-                    <img src="/images/logo-godrej.png">
+                    <img src="images/logo-godrej.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-coca-cola.png">
+                    <img src="images/logo-coca-cola.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-oppo.png">
+                    <img src="images/logo-oppo.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-paypal.png">
+                    <img src="images/logo-paypal.png">
                 </div>
                 <div class="col-5">
-                    <img src="/images/logo-philips.png">
+                    <img src="images/logo-philips.png">
                 </div>
             </div>
         </div>
@@ -328,12 +328,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and IOS</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="images/play-store.png">
+                        <img src="images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="images/logo-white.png">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Porro sed ipsam minima repellendus.</p>
                 </div>
                 <div class="footer-col-3">
