--- a/products-detail.html
+++ b/products-detail.html
@@ -18,7 +18,7 @@
         <div class="navbar">
 
             <div class="logo">
-                <a href="index.html"><img src="/images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="images/logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="Account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img class="cart-1" src="/images/cart.png" width="30px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img class="cart-1" src="images/cart.png" width="30px" height="30px"></a>
+            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
 
@@ -39,20 +39,20 @@
     <div class="small-container single-product">
         <div class="row">
             <div class="col-2">
-                <img src="/images/gallery-1.jpg" width="100%" id="ProductImg">
+                <img src="images/gallery-1.jpg" width="100%" id="ProductImg">
 
                 <div class="small-img-row">
                     <div class="small-img-col">
-                        <img src="/images/gallery-1.jpg" width="100%" class="small-img">
+                        <img src="images/gallery-1.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images/gallery-2.jpg" width="100%" class="small-img">
+                        <img src="images/gallery-2.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images/gallery-3.jpg" width="100%" class="small-img">
+                        <img src="images/gallery-3.jpg" width="100%" class="small-img">
                     </div>
                     <div class="small-img-col">
-                        <img src="/images/gallery-4.jpg" width="100%" class="small-img">
+                        <img src="images/gallery-4.jpg" width="100%" class="small-img">
                     </div>
                 </div>
 
@@ -95,7 +95,7 @@
 
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-9.jpg">
+                <img src="images/product-9.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -107,7 +107,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-10.jpg">
+                <img src="images/product-10.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -119,7 +119,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-11.jpg">
+                <img src="images/product-11.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -131,7 +131,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-12.jpg">
+                <img src="images/product-12.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -154,12 +154,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and IOS</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="images/play-store.png">
+                        <img src="images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="images/logo-white.png">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Porro sed ipsam minima
                         repellendus.</p>
                 </div>
