--- a/Account.html
+++ b/Account.html
@@ -18,7 +18,7 @@
         <div class="navbar">
 
             <div class="logo">
-                <a href="index.html"><img src="/images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="images/logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="Account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img class="cart-1" src="/images/cart.png" width="30px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img class="cart-1" src="images/cart.png" width="30px" height="30px"></a>
+            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
 
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-2">
-                    <img src="/images/image1.png" width="100%">
+                    <img src="images/image1.png" width="100%">
                 </div>
                 <div class="col-2">
                     <div class="form-container">
@@ -83,12 +83,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and IOS</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="images/play-store.png">
+                        <img src="images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="images/logo-white.png">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Porro sed ipsam minima
                         repellendus.</p>
                 </div>
