--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
         <div class="navbar">
 
             <div class="logo">
-                <a href="index.html"><img src="/images/logo.png" width="125px"></a>
+                <a href="index.html"><img src="images/logo.png" width="125px"></a>
             </div>
             <nav>
                 <ul id="MenuItems">
@@ -29,8 +29,8 @@
                     <li><a href="Account.html">Account</a></li>
                 </ul>
             </nav>
-            <a href="cart.html"><img class="cart-1" src="/images/cart.png" width="30px" height="30px"></a>
-            <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+            <a href="cart.html"><img class="cart-1" src="images/cart.png" width="30px" height="30px"></a>
+            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
 
@@ -46,7 +46,7 @@
             <tr>
                 <td>
                     <div class="cart-info">
-                        <img src="/images/buy-1.jpg">
+                        <img src="images/buy-1.jpg">
                         <div>
                             <p>Red Printed T-Shirt</p>
                             <small>$50.00</small>
@@ -61,7 +61,7 @@
             <tr>
                 <td>
                     <div class="cart-info">
-                        <img src="/images/buy-2.jpg">
+                        <img src="images/buy-2.jpg">
                         <div>
                             <p>Red Printed T-Shirt</p>
                             <small>$75.00</small>
@@ -76,7 +76,7 @@
             <tr>
                 <td>
                     <div class="cart-info">
-                        <img src="/images/buy-3.jpg">
+                        <img src="images/buy-3.jpg">
                         <div>
                             <p>Red Printed T-Shirt</p>
                             <small>$55.00</small>
@@ -122,12 +122,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and IOS</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="images/play-store.png">
+                        <img src="images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="images/logo-white.png">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Porro sed ipsam minima
                         repellendus.</p>
                 </div>
