--- a/products.html
+++ b/products.html
@@ -18,7 +18,7 @@
             <div class="navbar">
 
                 <div class="logo">
-                    <a href="index.html"><img src="/images/logo.png" width="125px"></a>
+                    <a href="index.html"><img src="images/logo.png" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -29,8 +29,8 @@
                         <li><a href="Account.html">Account</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img class="cart-1" src="/images/cart.png" width="30px" height="30px"></a>
-                <img src="/images/menu.png" class="menu-icon" onclick="menutoggle()">
+                <a href="cart.html"><img class="cart-1" src="images/cart.png" width="30px" height="30px"></a>
+                <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
         </div>
 
@@ -51,7 +51,7 @@
 
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-1.jpg">
+                <img src="images/product-1.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -63,7 +63,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-2.jpg">
+                <img src="images/product-2.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -75,7 +75,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-3.jpg">
+                <img src="images/product-3.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -87,7 +87,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-4.jpg">
+                <img src="images/product-4.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -101,7 +101,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-5.jpg">
+                <img src="images/product-5.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -113,7 +113,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-6.jpg">
+                <img src="images/product-6.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -125,7 +125,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-7.jpg">
+                <img src="images/product-7.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -137,7 +137,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-8.jpg">
+                <img src="images/product-8.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -151,7 +151,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <img src="/images/product-9.jpg">
+                <img src="images/product-9.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -163,7 +163,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-10.jpg">
+                <img src="images/product-10.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -175,7 +175,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-11.jpg">
+                <img src="images/product-11.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -187,7 +187,7 @@
                 <p>$50.00</p>
             </div>
             <div class="col-4">
-                <img src="/images/product-12.jpg">
+                <img src="images/product-12.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -217,12 +217,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for Android and IOS</p>
                     <div class="app-logo">
-                        <img src="/images/play-store.png">
-                        <img src="/images/app-store.png">
+                        <img src="images/play-store.png">
+                        <img src="images/app-store.png">
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="/images/logo-white.png">
+                    <img src="images/logo-white.png">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Porro sed ipsam minima repellendus.</p>
                 </div>
                 <div class="footer-col-3">
